[package]
name = "blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
hyper = { version = "1.6.0", features = ["full", "server"] }
once_cell = "1.21.3"
rocket = "0.5.1"
rocket_okapi = { version = "0.9.0", features = ["preserve_order", "swagger"] }
schemars = "1.0.1"
serde = "1.0.219"
sha2 = "0.10.9"
tokio = "1.45.1"
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
